Try to make a jlink image